# pegasus

./: .dockerignore  .gitignore  Cargo.toml  config.example.yaml  docker-compose-dev.yaml  docker-compose-env.yaml  docker-compose.yaml  go.mod  go.sum  go.work.sum  makefile
.github/workflows/: docker-release.yml  go.yml  rust.yml
common/config/: 0module.go  viper.go
common/consul/: 0module.go  consul.go  hertz.go  kitex.go
common/dcron/: 0module.go  dcron.go  logger.go
common/entities/: address.go
common/infra/: 0module.go  cache.go  etcd.go  mq.go  prometheus.go  redis.go
common/logging/: 0module.go  core.go  log.go  options.go
common/observability/: 0module.go  metrics.go  resource.go  trace.go
common/serializer/: codes.go  list.go  response.go  response_test.go
common/server/: 0module.go  handlers.go  server.go
common/settings/: 0module.go  implement.go  service.go
common/telegram_bot/: 0module.go  bot.go  channel.go  handler.go  webhook.go
components/any-action-handler/: go.mod  go.sum
components/any-action-handler/cmd/: main.go
components/any-action-handler/internal/bot/: 0module.go  bind.go
components/any-action-handler/internal/bot/handlers/: action.go  handlers.go
components/any-action-handler/services/: 0module.go
components/any-action-handler/services/action_reply/: service.go  service_test.go
components/basic-handler/: go.mod  go.sum
components/basic-handler/bot/: 0module.go  bind.go
components/basic-handler/bot/handlers/: handlers.go  start.go
components/basic-handler/cmd/: main.go
components/basic-handler/internal/bot/: 0module.go  bind.go
components/basic-handler/internal/bot/handlers/: action.go  dc.go  dc.tpl  handlers.go  id.go  id.tpl
components/basic-handler/services/: 0module.go
components/basic-handler/services/action_reply/: reply.tpl  service.go  service_test.go  utils.go  utils_test.go
components/basic-handler/services/datacenter/: service.go  service_test.go
components/gateway/: go.mod  go.sum
components/gateway/bot/: 0module.go
components/gateway/cmd/: main.go
components/gateway/controllers/: 0module.go  controller.go
components/gateway/controllers/handlers/: handlers.go  update.go
components/gateway/internal/bot/: webhook.go
components/gateway/internal/controllers/: 0module.go  controller.go
components/gateway/internal/controllers/handlers/: handlers.go  update.go
components/gateway/internal/controllers/middlewares/: middlewares.go  secret_validation.go
components/gateway/internal/services/: 0module.go
components/gateway/internal/services/transport/: service.go
components/gateway/services/: 0module.go
components/gateway/services/transport/: service.go
components/remake-handler/: go.mod  go.sum
components/remake-handler/cmd/: main.go
components/remake-handler/internal/bot/: 0module.go  bind.go
components/remake-handler/internal/bot/handlers/: handlers.go  remake.go
components/remake-handler/internal/services/: 0module.go
components/remake-handler/internal/services/areas/: areas.json  data.go  service.go
constants/: amqp.go
docker/basic/: Dockerfile
docker/bot-api-server/: Dockerfile
docker/rust-basic/: Dockerfile
entry/: entries.go
pkg/cache/: driver.go  redis.go  redis_hashmap.go  redis_item.go  redis_set.go
pkg/cryptor/: basic.go  basic_test.go
pkg/hertzloggerzap/: logger.go
pkg/hertzprometheus/: metrics_test.go  options.go  trace.go  tracer_test.go
pkg/utils/: amqp_trace.go  decimal.go  gob.go  gob_test.go  json.go  net.go  os.go  path.go  req.go  telego.go  tls_config.go  utils.go
rust-common/: Cargo.toml
rust-common/src/: duration.rs  lib.rs  settings.rs
rust-common/src/bot/: channel.rs  mod.rs  state.rs  utils.rs
rust-common/src/database/: mod.rs  utils.rs
rust-common/src/database/entities/: mod.rs  pm_forwarding_bot.rs  pm_forwarding_message.rs
rust-common/src/mq/: connection.rs  mod.rs  utils.rs
rust-common/src/observability/: mod.rs  resource.rs  tracing.rs
rust-common/src/redis/: client.rs  mod.rs  utils.rs
rust-components/network-functions-handler/: Cargo.toml
rust-components/network-functions-handler/src/: handlers.rs  main.rs  run.rs  utils.rs
rust-components/pm-bot-forwarding-handler/: Cargo.toml
rust-components/pm-bot-forwarding-handler/src/: handlers.rs  main.rs  run.rs  web.rs
rust-components/pm-bot-forwarding-handler/src/services/: forwarding_bot.rs  forwarding_message.rs  mod.rs
rust-components/stickers-export-handler/: Cargo.toml
rust-components/stickers-export-handler/src/: convert.rs  handlers.rs  main.rs  run.rs  state.rs
rust-migration/: Cargo.toml
rust-migration/src/: lib.rs  m20240407_142137_create_pm_forwarding_tables.rs  main.rs
