[package]
name = "pm-bot-forwarding-handler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "pm-bot-forwarding-handler"
path = "src/main.rs"

[dependencies]
pegasus-common = { workspace = true }

tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros"] }
log = { workspace = true }
pretty_env_logger = { workspace = true }
opentelemetry = { workspace = true, features = ["trace"] }
teloxide = { workspace = true, features = ["macros"] }
serde = { workspace = true, features = ["derive"] }
anyhow = "1.0"
reqwest = "0.12"
